--- a/navigation.html
+++ b/navigation.html
@@ -297,8 +297,8 @@
 	        </div>
 	        <ul class="navbar-items" id="navbarItems">
 	            <li><b><a style="color: #000000;" href="#about" class="navbar-item">🌐关于网站</a></b></li>
-	            <li><b><a style="color: #000000;" href="#works" class="navbar-item">🌐联系方式</a></b></li>
-	            <li><b><a style="color: #000000;" href="#contact" class="navbar-item">🌐网站历史</a></b></li>
+	            <li><b><a style="color: #000000;" href="./other/HistoryWebpage/HistoryWebpage.html" class="navbar-item">🌐网站历史</a></b></li>
+	            <li><b><a style="color: #000000;" href="#contact" class="navbar-item">🌐赞助网站</a></b></li>
 	        </ul>
 	    </div>
 	</nav>
@@ -325,11 +325,15 @@
     </div>
 
     <!-- 其他链接 -->
-    <div class="links">
-        <a href="#about">关于 CZwiki</a>
-        <a href="./other/FeiDian4cWeb.html">飞电4C网</a>
-        <a href="./other/ExtremelyHappyWeb.html">极乐网EHW</a>
-    </div>
+	<div class="links">
+	    <a href="./other/FeiDian4cWeb.html">飞电4C网</a>
+	</div>
+
+	<div class="links">
+	    <a href="./other/ExtremelyHappyWeb.html">极乐网EHW</a>
+	    <a href="https://one.kbai.cc/cxk/10/">🐔乐盒</a>
+	    <a href="https://one.kbai.cc/cxk/8/">别踩🐔块</a>
+	</div>
 
     <!-- 底部版权 -->
     <footer class="footer">
