--- a/other/ExtremelyHappyWeb.html
+++ b/other/ExtremelyHappyWeb.html
@@ -217,7 +217,7 @@
 <body>
     <div class="container">
         <!-- 标题 -->
-        <h1>〰️▫️▫️▫️️🔞   <b>极乐网</b>   ❗▫️▫️▫️️〰️️</h1>
+        <h1>〰️ 🔞 <b>极乐网</b> ❗️ 〰️️</h1>
 		<h3>请确保您<a style="color: #FF1493;">已满18周岁</a>否则请按左下角按键返回️️</h3>
         <!-- 引言 -->
         <div class="section">
